--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,13 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_SMS" />
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,7 +20,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PrincipalActivity">
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -49,9 +56,27 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".activity_registro" />
-        <activity android:name=".ListaAmigos" />
-        <activity android:name=".CardViewAmigos"></activity>
+        <activity android:name=".Activity_registro" />
+
+        <activity android:name=".CardViewAmigos" />
+        <activity android:name=".actividadDeUsuarios.Activity_principal">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".CardView_Solicitudes"
+            android:label="@string/title_activity_card_view__solicitudes"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Card_view_buscar_usuarios"
+            android:label="@string/title_activity_card_view_buscar_usuarios"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
     </application>
 
 </manifest>
